--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.29.1",
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.5",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.12",
     "socket-io": "^1.0.0",
     "socket.io": "^4.1.3",
