--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.5",
     "multer": "^1.4.3",
+    "node-emoji": "^1.11.0",
     "nodemon": "^2.0.12",
     "socket-io": "^1.0.0",
     "socket.io": "^4.2.0",
     "socket.io-client": "^4.1.3",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^2.2.7",
     "validator": "^13.6.0"
   }
